// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CourseList collapsed with multiple courses and pages snapshot 1`] = `
<div
  className="course-list-container"
>
  <div
    className="course-list-heading-container"
  >
    <h2
      className="course-list-title"
    >
      My Courses
    </h2>
    <div
      className="course-filter-controls-container"
    >
      <CourseFilterControls />
    </div>
  </div>
  <List
    filterOptions={Object {}}
    numPages={3}
    setPageNumber={[MockFunction setPageNumber]}
    showFilters={true}
    visibleList={
      Array [
        Object {
          "cardId": "foo",
        },
        Object {
          "cardId": "bar",
        },
        Object {
          "cardId": "baz",
        },
      ]
    }
  />
</div>
`;

exports[`CourseList no courses snapshot 1`] = `
<div
  className="course-list-container"
>
  <div
    className="course-list-heading-container"
  >
    <h2
      className="course-list-title"
    >
      My Courses
    </h2>
    <div
      className="course-filter-controls-container"
    >
      <CourseFilterControls />
    </div>
  </div>
  <List
    filterOptions={Object {}}
    numPages={1}
    setPageNumber={[MockFunction setPageNumber]}
    showFilters={false}
    visibleList={Array []}
  />
</div>
`;

exports[`CourseList no filters snapshot 1`] = `
<div
  className="course-list-container"
>
  <div
    className="course-list-heading-container"
  >
    <h2
      className="course-list-title"
    >
      My Courses
    </h2>
    <div
      className="course-filter-controls-container"
    >
      <CourseFilterControls />
    </div>
  </div>
  <List
    filterOptions={Object {}}
    numPages={1}
    setPageNumber={[MockFunction setPageNumber]}
    showFilters={false}
    visibleList={Array []}
  />
</div>
`;

exports[`CourseList with filters snapshot 1`] = `
<div
  className="course-list-container"
>
  <div
    className="course-list-heading-container"
  >
    <h2
      className="course-list-title"
    >
      My Courses
    </h2>
    <div
      className="course-filter-controls-container"
    >
      <CourseFilterControls
        abitary="filter"
      />
    </div>
  </div>
  <List
    filterOptions={
      Object {
        "abitary": "filter",
      }
    }
    numPages={1}
    setPageNumber={[MockFunction setPageNumber]}
    showFilters={true}
    visibleList={Array []}
  />
</div>
`;

exports[`CourseList with multiple courses and pages snapshot 1`] = `
<div
  className="course-list-container"
>
  <div
    className="course-list-heading-container"
  >
    <h2
      className="course-list-title"
    >
      My Courses
    </h2>
    <div
      className="course-filter-controls-container"
    >
      <CourseFilterControls />
    </div>
  </div>
  <List
    filterOptions={Object {}}
    numPages={3}
    setPageNumber={[MockFunction setPageNumber]}
    showFilters={false}
    visibleList={
      Array [
        Object {
          "cardId": "foo",
        },
        Object {
          "cardId": "bar",
        },
        Object {
          "cardId": "baz",
        },
      ]
    }
  />
</div>
`;
